--- a/package.json
+++ b/package.json
@@ -12,9 +12,11 @@
   "dependencies": {
     "alice-carousel": "^0.0.1",
     "express": "^4.19.2",
+    "mdb-react-ui-kit": "^8.0.0",
     "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.22.3",
     "react-scroll": "^1.9.0"
   },
