--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "alice-carousel": "^0.0.1",
+    "boxicons": "^2.1.4",
     "express": "^4.19.2",
     "mdb-react-ui-kit": "^8.0.0",
     "moment": "^2.30.1",
